--- a/productivity.html
+++ b/productivity.html
@@ -93,7 +93,7 @@
 
                     <!-- slide 2 -->
                     <div class="week-card-container">
-                        <div class="week-card-wrap green-border">
+                        <div class="week-card-wrap">
                             <div class="week-card">
                                 <img src="img/utility_icons/unlock.png" class="unlock-img"/>
                                 <span>Week 3</span>
@@ -703,7 +703,8 @@
           speed: 1000,
           variableWidth: true,
           centerMode: false,
-          centerPadding: "15"
+          centerPadding: "15",
+          focusOnSelect: true
         });
      
         function weekslideGo(dir) {
@@ -715,6 +716,7 @@
           }
         }
     </script>
+    
 
 </body>
 </html>
