--- a/index.html
+++ b/index.html
@@ -310,98 +310,28 @@
     <footer>
       <div class="footer-wrap container">
         <div class="row">
-          <div class="col-lg-4">
+          <div class="col-lg-2">
             <div class="footer-logo-wrap">
               <img src="img/footer_logo.png" class="img-fluid"/>
-              <p class="footer-address">
-                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-              </p>
               <div class="social-links-wrap desktop-view">
                 <a href="#">
                   <img src="img/facebook.png" class="img-fluid"/>
                 </a>
+                <a href="#">
+                  <img src="img/insta.png" class="img-fluid"/>
+                </a>
               </div>
             </div>
           </div>
-          <div class="col-lg-8">
-            <div class="footer-grid-cols-5">
-              <div class="footer-nav-links-wrap">
-                <h6>Company</h6>
-                <ul class="footer-nav-wrap">
-                  <li class="footer-nav-item">
-                    <a href="#" class="footer-nav-item-link">About Us</a>
-                  </li>
-                  <li class="footer-nav-item">
-                    <a href="#" class="footer-nav-item-link">Become a Contributor</a>
-                  </li>
-                  <li class="footer-nav-item">
-                    <a href="#" class="footer-nav-item-link">Careers</a>
-                  </li>
-                  <li class="footer-nav-item">
-                    <a href="#" class="footer-nav-item-link">Blog</a>
-                  </li>
-                  <li class="footer-nav-item">
-                    <a href="#" class="footer-nav-item-link">Site Map</a>
-                  </li>
-                  <li class="footer-nav-item">
-                    <a href="#" class="footer-nav-item-link">YouTube Solutions</a>
-                  </li>
-                </ul>
-              </div>
-              <div class="footer-nav-links-wrap">
-                <h6>Plans & Pricing</h6>
-                <ul class="footer-nav-wrap">
-                  <li class="footer-nav-item">
-                    <a href="#" class="footer-nav-item-link">Membership Plans</a>
-                  </li>
-                  <li class="footer-nav-item">
-                    <a href="#" class="footer-nav-item-link">Compare Licenses</a>
-                  </li>
-                </ul>
-              </div>
-              <div class="footer-nav-links-wrap">
-                <h6>SUPPORT</h6>
-                <ul class="footer-nav-wrap">
-                  <li class="footer-nav-item">
-                    <a href="#" class="footer-nav-item-link">Contact Us</a>
-                  </li>
-                  <li class="footer-nav-item">
-                    <a href="#" class="footer-nav-item-link">FAQ</a>
-                  </li>
-                  <li class="footer-nav-item">
-                    <a href="#" class="footer-nav-item-link">Cue Sheets</a>
-                  </li>
-                  <li class="footer-nav-item">
-                    <a href="#" class="footer-nav-item-link">Blog</a>
-                  </li>
-                  <li class="footer-nav-item">
-                    <a href="#" class="footer-nav-item-link">Affiliate Program</a>
-                  </li>
-                  <li class="footer-nav-item">
-                    <a href="#" class="footer-nav-item-link">Refer & get $25</a>
-                  </li>
-                  <li class="footer-nav-item">
-                    <a href="#" class="footer-nav-item-link">Good vibes</a>
-                  </li>
-                </ul>
-              </div>
-              <div class="footer-nav-links-wrap">
-                <h6>Quick links</h6>
-                <ul class="footer-nav-wrap">
-                  <li class="footer-nav-item">
-                    <a href="#" class="footer-nav-item-link">Privacy Policy</a>
-                  </li>
-                  <li class="footer-nav-item">
-                    <a href="#" class="footer-nav-item-link">Terms of Use</a>
-                  </li>
-                  <li class="footer-nav-item">
-                    <a href="#" class="footer-nav-item-link">Individual License</a>
-                  </li>
-                  <li class="footer-nav-item">
-                    <a href="#" class="footer-nav-item-link">Business License</a>
-                  </li>
-                </ul>
-              </div>
+          <div class="col-lg-10">
+            <div class="footer-links-wrap">
+              <a href="#" class="footer-link">About Us</a>
+              <span class="footer-link">|</span>
+              <a href="#" class="footer-link">Faq</a>
+              <span class="footer-link">|</span>
+              <a href="#" class="footer-link">T&C</a>
+              <span class="footer-link">|</span>
+              <a href="#" class="footer-link">Privacy Policy</a>
             </div>
           </div>
         </div>
@@ -411,6 +341,9 @@
           <div class="social-links-wrap tm-view">
             <a href="#">
               <img src="img/facebook.png" class="img-fluid"/>
+            </a>
+            <a href="#">
+              <img src="img/insta.png" class="img-fluid"/>
             </a>
           </div>
           <p>Copyright © 2022 Being My Best</p>
