added pdf button to audio players

--- a/wellbeing.html
+++ b/wellbeing.html
@@ -199,118 +199,138 @@
         <!-- Audio Section -->
         <section id="audio-section">
             <div class="container p-0">
-              <div class="audio-container">
+              <div class="fav-audio-container audio-container">
                 <div class="row">
                   <div class="col-sm-12">
                       <div class="audio-player">
-                          <div class="custom-audio-player">
-                              <div class="audio-btn-track-wrap">
-                                <button id="playAudio" class="playAudioButton">
-                                  <i class="fa-solid fa-circle-play"></i>
+                            <div class="custom-audio-player">
+                                <div class="audio-btn-track-wrap">
+                                    <button id="playAudio" class="playAudioButton">
+                                    <i class="fa-solid fa-circle-play"></i>
+                                    </button>
+                                    <span class="productivity-music-name">Knowing Yourself</span>
+                                    <!-- <span class="audio-duration audio-duration1 tm-view"></span> -->
+                                </div>
+                                <img src="img/banner-audio.png" class="img-fluid banner-audio-beats"/>
+                                <div class="track-fav-more-wrap">
+                                    <span class="audio-duration audio-duration1"></span>
+                                    <label for="fav-check1" class="fav-wrapper">
+                                        <input type="checkbox" id="fav-check1" class="fav-input"/>
+                                        <i class="fa-solid fa-heart"></i>
+                                    </label>
+                                    <i class="fa-solid fa-ellipsis-vertical"></i>
+                                </div>
+                                <button type="button" class="btn btn-pdf">
+                                    <span>READ PDF</span>
+                                    <img src="./img/pdf.png" class="img-fluid"/>
                                 </button>
-                                <span class="productivity-music-name">Knowing Yourself</span>
-                                <span class="audio-duration audio-duration1 tm-view"></span>
-                              </div>
-                              <img src="img/banner-audio.png" class="img-fluid banner-audio-beats"/>
-                              <div class="track-fav-more-wrap">
-                                <span class="audio-duration audio-duration1 desktop-view"></span>
-                                <label for="fav-check1" class="fav-wrapper">
-                                    <input type="checkbox" id="fav-check1" class="fav-input"/>
-                                    <i class="fa-solid fa-heart"></i>
-                                </label>
-                                <i class="fa-solid fa-ellipsis-vertical"></i>
-                              </div>
-                          </div>
-                          <audio controls id="banner-audio" class="banner-audio-element" src="https://www.kozco.com/tech/piano2-CoolEdit.mp3" type="audio/mpeg">
-                          </audio>
+                            </div>
+                            <audio controls id="banner-audio" class="banner-audio-element" src="https://www.kozco.com/tech/piano2-CoolEdit.mp3" type="audio/mpeg">
+                            </audio>
                       </div>
                   </div>
                   <div class="col-sm-12">
                       <div class="audio-player">
-                          <div class="custom-audio-player">
-                              <div class="audio-btn-track-wrap">
-                                <button id="playAudio2" class="playAudioButton"><i class="fa-solid fa-circle-play"></i></button>
-                                <span class="productivity-music-name">Self-Esteem</span>
-                                <span class="audio-duration audio-duration2 tm-view"></span>
-                              </div>
-                              <img src="img/banner-audio.png" class="img-fluid banner-audio-beats"/>
-                              <div class="track-fav-more-wrap">
-                                <span class="audio-duration audio-duration2 desktop-view"></span>
-                                <label for="fav-check2" class="fav-wrapper">
-                                    <input type="checkbox" id="fav-check2" class="fav-input"/>
-                                    <i class="fa-solid fa-heart"></i>
-                                </label>
-                                <i class="fa-solid fa-ellipsis-vertical"></i>
-                              </div>
-                          </div>
-                          <audio controls id="banner-audio2" class="banner-audio-element" src="https://www.kozco.com/tech/piano2-CoolEdit.mp3" type="audio/mpeg">
-                          </audio>
+                            <div class="custom-audio-player">
+                                <div class="audio-btn-track-wrap">
+                                    <button id="playAudio2" class="playAudioButton"><i class="fa-solid fa-circle-play"></i></button>
+                                    <span class="productivity-music-name">Self-Esteem</span>
+                                    <!-- <span class="audio-duration audio-duration2 tm-view"></span> -->
+                                </div>
+                                <img src="img/banner-audio.png" class="img-fluid banner-audio-beats"/>
+                                <div class="track-fav-more-wrap">
+                                    <span class="audio-duration audio-duration2"></span>
+                                    <label for="fav-check2" class="fav-wrapper">
+                                        <input type="checkbox" id="fav-check2" class="fav-input"/>
+                                        <i class="fa-solid fa-heart"></i>
+                                    </label>
+                                    <i class="fa-solid fa-ellipsis-vertical"></i>
+                                </div>
+                                <button type="button" class="btn btn-pdf">
+                                    <span>READ PDF</span>
+                                    <img src="./img/pdf.png" class="img-fluid"/>
+                                </button>
+                            </div>
+                            <audio controls id="banner-audio2" class="banner-audio-element" src="https://www.kozco.com/tech/piano2-CoolEdit.mp3" type="audio/mpeg">
+                            </audio>
                       </div>
                   </div>
                   <div class="col-sm-12">
                       <div class="audio-player">
-                          <div class="custom-audio-player">
-                              <div class="audio-btn-track-wrap">
-                                <button id="playAudio3" class="playAudioButton"><i class="fa-solid fa-circle-play"></i></button>
-                                <span class="productivity-music-name">Emotional Management</span>
-                                <span class="audio-duration audio-duration3 tm-view"></span>
-                              </div>
-                              <img src="img/banner-audio.png" class="img-fluid banner-audio-beats"/>
-                              <div class="track-fav-more-wrap">
-                                <span class="audio-duration audio-duration3 desktop-view"></span>
-                                <label for="fav-check3" class="fav-wrapper">
-                                    <input type="checkbox" id="fav-check3" class="fav-input"/>
-                                    <i class="fa-solid fa-heart"></i>
-                                </label>
-                                <i class="fa-solid fa-ellipsis-vertical"></i>
-                              </div>
-                          </div>
-                          <audio controls id="banner-audio3" class="banner-audio-element" src="https://www.kozco.com/tech/piano2-CoolEdit.mp3" type="audio/mpeg">
-                          </audio>
+                            <div class="custom-audio-player">
+                                <div class="audio-btn-track-wrap">
+                                    <button id="playAudio3" class="playAudioButton"><i class="fa-solid fa-circle-play"></i></button>
+                                    <span class="productivity-music-name">Emotional Management</span>
+                                    <!-- <span class="audio-duration audio-duration3 tm-view"></span> -->
+                                </div>
+                                <img src="img/banner-audio.png" class="img-fluid banner-audio-beats"/>
+                                <div class="track-fav-more-wrap">
+                                    <span class="audio-duration audio-duration3"></span>
+                                    <label for="fav-check3" class="fav-wrapper">
+                                        <input type="checkbox" id="fav-check3" class="fav-input"/>
+                                        <i class="fa-solid fa-heart"></i>
+                                    </label>
+                                    <i class="fa-solid fa-ellipsis-vertical"></i>
+                                </div>
+                                <button type="button" class="btn btn-pdf">
+                                    <span>READ PDF</span>
+                                    <img src="./img/pdf.png" class="img-fluid"/>
+                                </button>
+                            </div>
+                            <audio controls id="banner-audio3" class="banner-audio-element" src="https://www.kozco.com/tech/piano2-CoolEdit.mp3" type="audio/mpeg">
+                            </audio>
                       </div>
                   </div>
                   <div class="col-sm-12">
                       <div class="audio-player">
-                          <div class="custom-audio-player">
-                              <div class="audio-btn-track-wrap">
-                                <button id="playAudio4" class="playAudioButton"><i class="fa-solid fa-circle-play"></i></button>
-                                <span class="productivity-music-name">Eating Right & Nutrition (1)</span>
-                                <span class="audio-duration audio-duration4 tm-view"></span>
-                              </div>
-                              <img src="img/banner-audio.png" class="img-fluid banner-audio-beats"/>
-                              <div class="track-fav-more-wrap">
-                                <span class="audio-duration audio-duration4 desktop-view"></span>
-                                <label for="fav-check4" class="fav-wrapper">
-                                    <input type="checkbox" id="fav-check4" class="fav-input"/>
-                                    <i class="fa-solid fa-heart"></i>
-                                </label>
-                                <i class="fa-solid fa-ellipsis-vertical"></i>
-                              </div>
-                          </div>
-                          <audio controls id="banner-audio4" class="banner-audio-element" src="https://www.kozco.com/tech/piano2-CoolEdit.mp3" type="audio/mpeg">
-                          </audio>
+                            <div class="custom-audio-player">
+                                <div class="audio-btn-track-wrap">
+                                    <button id="playAudio4" class="playAudioButton"><i class="fa-solid fa-circle-play"></i></button>
+                                    <span class="productivity-music-name">Eating Right & Nutrition (1)</span>
+                                    <!-- <span class="audio-duration audio-duration4 tm-view"></span> -->
+                                </div>
+                                <img src="img/banner-audio.png" class="img-fluid banner-audio-beats"/>
+                                <div class="track-fav-more-wrap">
+                                    <span class="audio-duration audio-duration4"></span>
+                                    <label for="fav-check4" class="fav-wrapper">
+                                        <input type="checkbox" id="fav-check4" class="fav-input"/>
+                                        <i class="fa-solid fa-heart"></i>
+                                    </label>
+                                    <i class="fa-solid fa-ellipsis-vertical"></i>
+                                </div>
+                                <button type="button" class="btn btn-pdf">
+                                    <span>READ PDF</span>
+                                    <img src="./img/pdf.png" class="img-fluid"/>
+                                </button>
+                            </div>
+                            <audio controls id="banner-audio4" class="banner-audio-element" src="https://www.kozco.com/tech/piano2-CoolEdit.mp3" type="audio/mpeg">
+                            </audio>
                       </div>
                   </div>
                   <div class="col-sm-12">
                       <div class="audio-player">
-                          <div class="custom-audio-player">
-                              <div class="audio-btn-track-wrap">
-                                <button id="playAudio5" class="playAudioButton"><i class="fa-solid fa-circle-play"></i></button>
-                                <span class="productivity-music-name">Exercise for Men</span>
-                                <span class="audio-duration audio-duration5 tm-view"></span>
-                              </div>
-                              <img src="img/banner-audio.png" class="img-fluid banner-audio-beats"/>
-                              <div class="track-fav-more-wrap">
-                                <span class="audio-duration audio-duration5 desktop-view"></span>
-                                <label for="fav-check5" class="fav-wrapper">
-                                    <input type="checkbox" id="fav-check5" class="fav-input"/>
-                                    <i class="fa-solid fa-heart"></i>
-                                </label>
-                                <i class="fa-solid fa-ellipsis-vertical"></i>
-                              </div>
-                          </div>
-                          <audio controls id="banner-audio5" class="banner-audio-element" src="https://www.kozco.com/tech/piano2-CoolEdit.mp3" type="audio/mpeg">
-                          </audio>
+                            <div class="custom-audio-player">
+                                <div class="audio-btn-track-wrap">
+                                    <button id="playAudio5" class="playAudioButton"><i class="fa-solid fa-circle-play"></i></button>
+                                    <span class="productivity-music-name">Exercise for Men</span>
+                                    <!-- <span class="audio-duration audio-duration5 tm-view"></span> -->
+                                </div>
+                                <img src="img/banner-audio.png" class="img-fluid banner-audio-beats"/>
+                                <div class="track-fav-more-wrap">
+                                    <span class="audio-duration audio-duration5"></span>
+                                    <label for="fav-check5" class="fav-wrapper">
+                                        <input type="checkbox" id="fav-check5" class="fav-input"/>
+                                        <i class="fa-solid fa-heart"></i>
+                                    </label>
+                                    <i class="fa-solid fa-ellipsis-vertical"></i>
+                                </div>
+                                <button type="button" class="btn btn-pdf">
+                                    <span>READ PDF</span>
+                                    <img src="./img/pdf.png" class="img-fluid"/>
+                                </button>
+                            </div>
+                            <audio controls id="banner-audio5" class="banner-audio-element" src="https://www.kozco.com/tech/piano2-CoolEdit.mp3" type="audio/mpeg">
+                            </audio>
                       </div>
                   </div>
                 </div>
